changed size of results area

--- a/sample-facebook-api/styles/main.css
+++ b/sample-facebook-api/styles/main.css
@@ -26,6 +26,7 @@ body
 .ch30 {height:30%;}
 .ch40 {height:40%;}
 .ch50 {height:50%;}
+.ch55 {height:55%;}
 .ch60 {height:60%;}
 .ch70 {height:70%;}
 .ch80 {height:80%;}
